fix spacing in main style sheet file

--- a/site/public/style/style.css
+++ b/site/public/style/style.css
@@ -2,6 +2,11 @@
     border: 0;
 }
 
+.container-full-width .navbar {
+    border-radius: 0;
+    margin-bottom: 0;
+}
+
 .body-container {
     min-height: 540px;
 }
@@ -27,10 +32,9 @@
 .footer-container {
     height: 100%;
     width: 100%;
-    padding: 10px 10px 0px;
+    padding: 0;
     margin-left: 0;
     margin-right: 0;
-    /* background-color: #f2f2f2; */
 }
 
 .footer {
